# QRT

./: README.md
Coordinate Conversions/: altaz2polar.py  altaz2radec.py  coordinates.py  polar2altaz.py  radec2altaz.py
docs/: GNURadio.md
notes/noise/: QRTNoise.tex
software/: MotorController.py  master_control.py  setRaDecSSH.py  testclient.py  testcontrol.py
software/demos/pyro/: MotorControl.py  pyroclient.py  pyroserver.py
software/gnuRadio/: README.md
software/gnuRadio/gr-QRT/: CMakeLists.txt  MANIFEST.md
software/gnuRadio/gr-QRT/cmake/Modules/: QRTConfig.cmake
software/gnuRadio/gr-QRT/docs/: README.QRT
software/gnuRadio/gr-QRT/docs/doxygen/: Doxyfile.in
software/gnuRadio/gr-QRT/docs/doxygen/other/: group_defs.dox  main_page.dox
software/gnuRadio/gr-QRT/grc/: CMakeLists.txt  QRT_WriteToFile.xml  QRT_welch.xml
software/gnuRadio/gr-QRT/include/QRT/: CMakeLists.txt  api.h
software/gnuRadio/gr-QRT/lib/: CMakeLists.txt  qa_QRT.cc  qa_QRT.h  test_QRT.cc
software/gnuRadio/gr-QRT/python/: CMakeLists.txt  WriteToFile.py  __init__.py  qa_WriteToFile.py  qa_welch.py  welch.py
software/gnuRadio/gr-QRT/swig/: CMakeLists.txt  QRT_swig.i
software/gnuRadio/gr-WelchManager/: CMakeLists.txt  MANIFEST.md  README.md
software/gnuRadio/gr-WelchManager/cmake/Modules/: WelchManagerConfig.cmake
software/gnuRadio/gr-WelchManager/docs/: README.WelchManager
software/gnuRadio/gr-WelchManager/docs/doxygen/: Doxyfile.in
software/gnuRadio/gr-WelchManager/docs/doxygen/other/: group_defs.dox  main_page.dox
software/gnuRadio/gr-WelchManager/grc/: CMakeLists.txt  WelchManager_welch.xml
software/gnuRadio/gr-WelchManager/include/WelchManager/: CMakeLists.txt  api.h
software/gnuRadio/gr-WelchManager/lib/: CMakeLists.txt  qa_WelchManager.cc  qa_WelchManager.h  test_WelchManager.cc
software/gnuRadio/gr-WelchManager/python/: CMakeLists.txt  NoiseReduction.py  WelchDemo.py  __init__.py  generator.py  input1.txt  input2.txt  output1.txt  output2.txt  output3.txt  qa_welch.py  welch.py
software/gnuRadio/gr-WelchManager/swig/: CMakeLists.txt  WelchManager_swig.i
software/gnuRadio/samples/: twoToOneSided.py
software/motors/: MotorController.py  MotorController_demo.py  checkswitch.py  switchcounts.py
tutorials/: PythonIntro.ipynb  signal-01-planck-equation.ipynb  signal-02-measuring-power.ipynb  welch-tutorial.ipynb
